test/error/E22.1.chigfn
{
	"type": "function",
	"name": "helloworld",
	"description": "Prints Hello World",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"nodes": {
		"485e399f-d204-4579-8d57-311072e37e56": {
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
		{
			"type": "data",
			"input": ["485e399f-d204-4579-8d57-311072e37e56", 0],
			"output": ["485e399f-d204-4579-8d57-311072e37e56", 0]
		}
	],
	"local_variables": {}
}
